--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "express-session": "^1.18.1",
     "mongodb": "^6.13.0",
     "mongoose": "^8.10.0",
+    "multer": "^1.4.5-lts.1",
     "nocache": "^4.0.0",
     "nodemailer": "^6.10.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "sharp": "^0.33.5",
+    "sweetalert2": "^11.17.2"
   }
 }
